<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.logs.LogsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="@dimen/tiny_175"
            android:background="@color/orange">

            <ImageView
                android:id="@+id/ivLogout"
                android:layout_width="@dimen/large_100"
                android:layout_height="@dimen/large_100"
                android:layout_marginStart="@dimen/normal_100"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_logout"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvTitle" />

            <ImageView
                android:id="@+id/ivUserList"
                android:layout_width="@dimen/large_100"
                android:layout_height="@dimen/large_100"
                android:layout_marginStart="@dimen/normal_100"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
                app:layout_constraintStart_toEndOf="@+id/ivLogout"
                app:layout_constraintTop_toTopOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_150"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal_150"
                android:textStyle="bold"
                android:text="@string/food_list_adapter_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivDeleteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_100"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvTitle"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_150"
                android:layout_marginStart="@dimen/normal_100"
                android:textSize="@dimen/text_small_125"
                android:textStyle="bold"
                tools:text="Usuario: Pedro Orós"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_150"
                android:layout_marginEnd="@dimen/normal_100"
                android:textSize="@dimen/text_small_125"
                android:textStyle="bold"
                tools:text="30/04/24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_100"
                app:layout_constraintTop_toBottomOf="@+id/clList"
                tools:listitem="@layout/food_list_item" />

        <TextView
            android:id="@+id/tvEmptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal_150"
            android:textStyle="bold"
            android:text="@string/empty_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/normal_100"
        android:layout_marginBottom="@dimen/normal_100"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_add"
        app:fabSize="mini"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>